# ytuff

./: %USERPROFILE%.cargoconfig.toml  .cargoconfig.toml  .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  RUSTPLAYER_GUIDE.md  Sensor_Programming_and_Arduino_Basics-3.pptx  fix_hang.patch  project_source_dump.md  rustplayer.desktop  rustplayer.nisscript  rustplayer.service  test_discord.rs  ytuff.desktop
.cargo/: config.toml
packaging/winget/: README.md
packaging/winget/manifests/h/HarshJha/YTuff/1.0.2/: HarshJha.YTuff.installer.yaml  HarshJha.YTuff.locale.en-US.yaml  HarshJha.YTuff.yaml
packaging/winget/manifests/h/HarshJha/YTuff/1.0.3/: HarshJha.YTuff.installer.yaml  HarshJha.YTuff.locale.en-US.yaml  HarshJha.YTuff.yaml
packaging/wix/: ytuff.wxs
scripts/: build-windows-msi.ps1  build-windows.cmd  build-windows.ps1  release.sh  windows-package.ps1
src/: appdata.rs  attach.rs  auth.rs  daemon.rs  discord_rpc.rs  downloads.rs  library_cache.rs  lyrics.rs  main.py  main.rs  media_controls.rs  playlist.rs  project_source_dump.md  proxy.rs  resolve.rs  tray.rs
src/core/: mod.rs  track.rs
src/playback/: mod.rs
src/sources/: local.rs  mod.rs  soundcloud.rs  youtube.rs
src/ui/: media.rs  mod.rs  musixmatch.py
