[package]
name = "rustplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
lofty = "0.11"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2.0"
percent-encoding = "2.0"
base64 = "0.22"
dirs = "6.0"
image = "0.24"
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
webbrowser = "1.0"
rodio = { version = "0.19", default-features = false, features = ["mp3", "flac", "vorbis", "wav", "symphonia-aac", "symphonia-isomp4"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "isomp4"] }
rustfft = "6.2"
num-complex = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
aes-gcm = "0.10"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Cryptography", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
winit = "0.30"
wry = "0.55"
